# robot_follow_vision

./: CMakeLists.txt  Makefile  README.md  manifest.xml
matlab_src/: ROS_connection.m  TEST001.mat  TEST002.mat  VelControlMSG.m  iter.mat  main.m  main.m~  robotStateMSG.m  samples30.mat  test1806.mat
src/: CameraClass.cpp  CameraClass.hpp  Motion_API.hpp  bipolar-coord-control.cpp  calibration.cpp  ellipsdetection.cpp  elliptical-coord-control.cpp  features-detection.cpp  mocap-tracking-beta.cpp  testopencv.cpp  tracking-circles.cpp  tracking-circles.cpp.autosave  vision-control-beta.cpp
